# ChangeLog for xfce-extra/xfce4-mount
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-mount/ChangeLog,v 1.7 2005/12/10 03:28:57 dostrow Exp $

  10 Dec 2005; Daniel Ostrow <dostrow@gentoo.org> xfce4-mount-0.3.ebuild:
  Stable on ppc64.

*xfce4-mount-0.3.2 (09 Dec 2005)

  09 Dec 2005; Daniel Ostrow <dostrow@gentoo.org> +xfce4-mount-0.3.2.ebuild:
  Version bump for to 0.3.2.

*xfce4-mount-0.3-r1 (06 Oct 2005)

  06 Oct 2005; Brad Cowan <bcowan@gentoo.org> +xfce4-mount-0.3-r1.ebuild:
  Xfce builds for new eclass and modular Xorg.

  08 Sep 2005; Aron Griffis <agriffis@gentoo.org> xfce4-mount-0.3.ebuild:
  Mark 0.3 stable on ia64

  08 Sep 2005; Luis Medinas <metalgod@gentoo.org> xfce4-mount-0.3.ebuild:
  Marked Stable on AMD64.

  07 Sep 2005; Brad Cowan <bcowan@gentoo.org> xfce4-mount-0.3.ebuild:
  Stable on x86.

*xfce4-mount-0.3 (17 Jun 2005)

  17 Jun 2005; Brad Cowan <bcowan@gentoo.org> +metadata.xml,
  +xfce4-mount-0.3.ebuild:
  Initial import.
