@@ -1,8 +1,24 @@
 MD5 1b74129951ce0e10a25d8715d0cc8f9f ChangeLog 1039
+RMD160 5f616ac884f266a9d1467dedd8dcc2b49cc00df7 ChangeLog 1039
+SHA256 7a8a7a621dffaa34926b1a7ac68432f20ac889695e78529476a87a8cbeb5db06 ChangeLog 1039
 MD5 5d471bd57683d0fe5f8613ee71b2d5ad files/digest-xfce4-mount-0.3 74
+RMD160 0b66c5420135182160d401ac8b68ad5785556950 files/digest-xfce4-mount-0.3 74
+SHA256 2595597c1256e1a733c5664b96b7d7873f19c6ddb09e7494865cda08aaae8605 files/digest-xfce4-mount-0.3 74
 MD5 5d471bd57683d0fe5f8613ee71b2d5ad files/digest-xfce4-mount-0.3-r1 74
+RMD160 0b66c5420135182160d401ac8b68ad5785556950 files/digest-xfce4-mount-0.3-r1 74
+SHA256 2595597c1256e1a733c5664b96b7d7873f19c6ddb09e7494865cda08aaae8605 files/digest-xfce4-mount-0.3-r1 74
 MD5 4ee8e25a0f38b31b2c9a38a513ae45e1 files/digest-xfce4-mount-0.3.2 76
+RMD160 2eba2d138cc4a242b9ba515911c9f0b1a19939bc files/digest-xfce4-mount-0.3.2 76
+SHA256 a2de7c7e6a246d5098d7084683b542b96a696cf5406af7e155e4069892976ad9 files/digest-xfce4-mount-0.3.2 76
 MD5 c390804e060ffd11a5bbb143434b2b2d metadata.xml 157
+RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 metadata.xml 157
+SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61 metadata.xml 157
 MD5 2b95b1e0ba0e4214c18a0c6ad256d788 xfce4-mount-0.3-r1.ebuild 378
-MD5 15c820b4e826211a78b4ddfb9ad73f3d xfce4-mount-0.3.2.ebuild 379
+RMD160 d032c83352104fa43d54d74b9992f8ac7152d200 xfce4-mount-0.3-r1.ebuild 378
+SHA256 fa291583b18de8284fd02c4eddaa547c571cf6ababed2dd476fc34ff2fe7d6ee xfce4-mount-0.3-r1.ebuild 378
+MD5 3d12df0cfdfdb6982673f4314fecf69d xfce4-mount-0.3.2.ebuild 378
+RMD160 7b690ea29f339b387e9007b40059e5ceb17b0b87 xfce4-mount-0.3.2.ebuild 378
+SHA256 259a4d4d5bc3f413f7ac231e93990773c9f805528c41b662f7535e1ec00f6d25 xfce4-mount-0.3.2.ebuild 378
 MD5 7da2c353f6571ea9f67fd309d734e9e5 xfce4-mount-0.3.ebuild 375
+RMD160 7da68695216054c1a6d0a6cc400a0133dedf6513 xfce4-mount-0.3.ebuild 375
+SHA256 35425f613813428a1a2318075a78d08330afed2cc4683dc0034c9888f1509ba6 xfce4-mount-0.3.ebuild 375
