@@ -1,6 +1,9 @@
 # ChangeLog for xfce-extra/xfce4-mount
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-mount/ChangeLog,v 1.7 2005/12/10 03:28:57 dostrow Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-mount/ChangeLog,v 1.8 2006/02/09 03:33:51 agriffis Exp $
+
+  09 Feb 2006; Aron Griffis <agriffis@gentoo.org> xfce4-mount-0.3.2.ebuild:
+  Mark 0.3.2 stable on alpha
 
   10 Dec 2005; Daniel Ostrow <dostrow@gentoo.org> xfce4-mount-0.3.ebuild:
   Stable on ppc64.
